# ComputerAgent

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  windows-release.yml
backend/: __init__.py  requirements.txt
backend/computeragent/: __init__.py  audit.py  config.py  executor.py  install_state.py  model_catalog.py  models.py  providers.py  server.py  storage.py
backend/computeragent/audio/: service.py
backend/computeragent/browser/: service.py
backend/computeragent/core/: agent.py
backend/computeragent/planner/: service.py
backend/computeragent/policy/: __init__.py  service.py
backend/computeragent/research/: service.py
backend/computeragent/security/: service.py
backend/tests/: test_workflow.py
demo_data/Projects/2023/: client-plan.txt
demo_data/Projects/2024/: release-checklist.txt
demo_data/Security/Downloads/: Invoice-Review.js
demo_data/Security/Startup/: .hidden-launcher.vbs
demo_data/browser/: recipes.json
demo_data/projects/WebsiteRevamp/: notes.md
demo_data/research/: framer.json
docs/: architecture.md  open-source-model-stack.md  windows-installer-updates.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  (+1 more)
scripts/: dev.sh  install_deps.sh  install_open_source_stack.py  launch_built.py  package.sh  prepare_local_assets.py
shared/: model-stack-8gb.json  plan-schema.json  policy-whitelist.json  policy-whitelist.schema.json  sample-plans.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
