[package]
name = "computeragent"
version = "0.1.0"
edition = "2021"
description = "ComputerAgent desktop shell"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
